--- a/yamls/coppermine.yml
+++ b/yamls/coppermine.yml
@@ -1,4 +1,5 @@
 # URL: http://coppermine-gallery.net/
+# NOTE: 1.4.x support ended http://forum.coppermine-gallery.net/index.php/topic,66659.0.html
 # NOT-FOR-US: HTB22836 path disclosure
 # NOT-FOR-US: CVE-2015-6528 https://packetstormsecurity.com/files/133059/Coppermine-Photo-Gallery-1.5.36-Cross-Site-Scripting.html only affects instances where installation has not been completed. http://forum.coppermine-gallery.net/index.php/topic,78662.msg381214.html
 # CVE-2010-4815 1.4.26  http://forum.coppermine-gallery.net/index.php/topic,63510.0.html
@@ -9,12 +10,14 @@
 # CVE-2015-3921 1.5.36  http://forum.coppermine-gallery.net/index.php/topic,78194.0.html
 # CVE-2015-3922 1.5.36
 # CVE-2015-3923 1.5.36
-# CVE-2016-XXXX 1.5.44  http://forum.coppermine-gallery.net/index.php/topic,78867.0.html https://blog.ripstech.com/2016/coppermine-second-order-command-execution/
+# CVE-2016-TODO 1.5.44  http://forum.coppermine-gallery.net/index.php/topic,78867.0.html https://blog.ripstech.com/2016/coppermine-second-order-command-execution/
+# CVE-2010-TODO 1.4.27 http://forum.coppermine-gallery.net/index.php/topic,65023.0.html
+# CVE-2018-14478 1.5.48 https://www.netsparker.com/web-applications-advisories/ns-18-050-cross-site-scripting-in-coppermine/ http://forum.coppermine-gallery.net/index.php/topic,79577.0.html
 Coppermine:
   1:
     location: ['/sql/basic.sql']
-    secure_version: '1.5.44'
+    secure_version: '1.5.48'
     regexp: ['\#\#  Coppermine version.*?(?P<version>[0-9.]+)']
-    cve: 'http://forum.coppermine-gallery.net/index.php/topic,78867.0.html https://blog.ripstech.com/2016/coppermine-second-order-command-execution/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-14478 http://forum.coppermine-gallery.net/index.php/topic,79577.0.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
