CVE-2013-7466, CVE-2013-7467, CVE-2013-7468

--- a/yamls/smf.yml
+++ b/yamls/smf.yml
@@ -45,9 +45,9 @@
 # N/A           2.0.1/1.1.1     SA46386
 # CVE-2013-0192 1.1.11
 # CVE-2013-4395 2.0.5 https://www.openwall.com/lists/oss-security/2013/09/15/2
-# CVE-2013-7466 2.0.5 http://hauntit.blogspot.com/2013/04/en-smf-204-full-disclosure.html
-# CVE-2013-7467 2.0.5 http://hauntit.blogspot.com/2013/04/en-smf-204-full-disclosure.html
-# CVE-2013-7468 2.0.5 https://packetstormsecurity.com/files/121391/public_phpInjection-smf204.txt
+# CVE-2013-7466 2.0.5 http://hauntit.blogspot.com/2013/04/en-smf-204-full-disclosure.html lfi
+# CVE-2013-7467 2.0.5 http://hauntit.blogspot.com/2013/04/en-smf-204-full-disclosure.html XSS via the index.php?action=pm;sa=settings;save sa parameter
+# CVE-2013-7468 2.0.5 https://packetstormsecurity.com/files/121391/public_phpInjection-smf204.txt PHP Code Injection via the index.php?action=admin;area=languages;sa=editlang dictionary parameter
 # CVE-2013-4465 2.0.6 https://github.com/SimpleMachines/SMF2.1/issues/701
 # CVE-2013-7234 2.0.6/1.1.19 http://www.jakoblell.com/blog/2013/12/13/multiple-vulnerabilities-in-smf-forum-software/ http://www.simplemachines.org/community/index.php?topic=512964.0
 # CVE-2013-7235 2.0.6/1.1.19 http://www.jakoblell.com/blog/2013/12/13/multiple-vulnerabilities-in-smf-forum-software/ http://www.simplemachines.org/community/index.php?topic=512964.0
