CVE-2018-9861 has been assigned for SA-CORE-2018-003

--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -81,7 +81,7 @@
 # https://drupal.org/SA-CORE-2018-001   CVE-2017-6931   8.4.5/7.57
 # https://drupal.org/SA-CORE-2018-001   CVE-2017-6932   8.4.5/7.57
 # https://drupal.org/SA-CORE-2018-002   CVE-2018-7600   8.5.1/7.58
-# https://drupal.org/SA-CORE-2018-003   TODO            8.5.2/8.4.7
+# https://drupal.org/SA-CORE-2018-003   CVE-2018-9861   8.5.2/8.4.7
 # https://drupal.org/SA-CORE-2018-004   CVE-2018-7602   8.5.3/8.4.8/7.59
 # https://drupal.org/SA-CORE-2018-005   CVE-2018-14773  8.5.6
 # https://drupal.org/SA-CORE-2019-001   CVE-2019-6338   8.6.6/8.5.9/7.62
