--- a/yamls/collabtive.yml
+++ b/yamls/collabtive.yml
@@ -1,5 +1,6 @@
 # URL: http://collabtive.o-dyn.de/
-# CVE-2010-5285
+# CVE-2010-5284 http://www.exploit-db.com/exploits/15240
+# CVE-2010-5285 http://www.exploit-db.com/exploits/15240
 # CVE-2012-2670
 # CVE-2013-6872 1.2 http://secunia.com/advisories/56329/
 # CVE-2014-3246 2.0
