--- a/yamls/vanillaforums.yml
+++ b/yamls/vanillaforums.yml
@@ -17,6 +17,7 @@
 # CVE-2018-17571 2.6.1 https://hackerone.com/reports/361957
 # CVE-2018-19499 2.6.2/2.5.5 https://hackerone.com/reports/407552
 # CVE-2018-18903 2.6.4 https://github.com/vanilla/vanilla/releases/tag/Vanilla_2.6.4 https://open.vanillaforums.com/discussion/36771/security-update-vanilla-2-6-4
+# CVE-2019-8279 2.5 https://scriptinjection.blogspot.com/2019/02/vanilla-forums-25-stored-xss-in-any.html
 Vanilla Forums:
   1:
     location: ['/environment.php']
