--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2665,7 +2665,7 @@ WordPress plugin quiz-master-next:
     location: ['/wp-content/plugins/quiz-master-next/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://security-consulting.icu/blog/2019/02/wordpress-quiz-and-survey-master-xss/ https://lists.openwall.net/full-disclosure/2019/02/05/5'  # TODO: CVE requested 2019-03-05
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9575 https://security-consulting.icu/blog/2019/02/wordpress-quiz-and-survey-master-xss/ https://lists.openwall.net/full-disclosure/2019/02/05/5'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin blog2social:
@@ -2673,6 +2673,6 @@ WordPress plugin blog2social:
     location: ['/wp-content/plugins/blog2social/readme.txt']
     secure_version: '5.0.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://security-consulting.icu/blog/2019/02/wordpress-blog2social-xss/ https://lists.openwall.net/full-disclosure/2019/02/05/6'  # TODO: CVE requested 2019-03-05
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9576 https://security-consulting.icu/blog/2019/02/wordpress-blog2social-xss/ https://lists.openwall.net/full-disclosure/2019/02/05/6'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
