--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1046,12 +1046,13 @@ WordPress plugin wp-live-chat-support:
     cve: 'OVE-20160712-0008 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wp_live_chat_support_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# OVE-20160721-0003 1.1.48 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_contact_form_to_email_wordpress_plugin.html
 WordPress plugin contact-form-to-email:
   1:
     location: ['/wp-content/plugins/contact-form-to-email/readme.txt']
-    secure_version: '1.1.48'
+    secure_version: '1.2.66'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160721-0003 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_contact_form_to_email_wordpress_plugin.html'
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/7 https://security-consulting.icu/blog/2019/02/wordpress-contact-form-email-xss-csrf/'  # TODO: CVE requested 2019-03-10
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin code-snippets:
