--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -175,10 +175,11 @@
 # CVE-2019-7742 3.9.3 https://developer.joomla.org/security-centre/766-20190202-core-browserside-mime-type-sniffing-causes-xss-attack-vectors.html
 # CVE-2019-7743 3.9.3 https://developer.joomla.org/security-centre/770-20190206-core-implement-the-typo3-phar-stream-wrapper.html
 # CVE-2019-7744 3.9.3 https://developer.joomla.org/security-centre/765-20190201-core-lack-of-url-filtering-in-various-core-components.html
+# CVE-2019-9713 3.9.4 https://developer.joomla.org/security-centre/775-20190304-core-missing-acl-check-in-sample-data-plugins.html
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.3'
+    secure_version: '3.9.4'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-7739 https://nvd.nist.gov/vuln/detail/CVE-2019-7742 https://nvd.nist.gov/vuln/detail/CVE-2019-7743 https://nvd.nist.gov/vuln/detail/CVE-2019-7744'
     fingerprint: detect_general
@@ -186,40 +187,40 @@ Joomla 3:
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.3'
+    secure_version: '3.9.4'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.3 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.4 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.3'
+    secure_version: '3.9.4'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.3 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.3'
+    secure_version: '3.9.4'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.3 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.3'
+    secure_version: '3.9.4'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.3 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.3'
+    secure_version: '3.9.4'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.3 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.4 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
