--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1497,12 +1497,13 @@ WordPress plugin calendar:
     cve: 'OVE-20160725-0008 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_calendar_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# OVE-20160724-0007 6.3.15 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wp_google_maps_plugin_via_csrf.html
 WordPress plugin wp-google-maps:
   1:
     location: ['/wp-content/plugins/wp-google-maps/readme.txt']
-    secure_version: '6.3.15'
+    secure_version: '7.10.43'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160724-0007 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wp_google_maps_plugin_via_csrf.html'
+    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/13 https://security-consulting.icu/blog/2019/02/wordpress-wpgooglemaps-xss/'  # TODO: CVE requested 2019-03-18
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin content-slide:
