--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -175,13 +175,18 @@
 # CVE-2019-7742 3.9.3 https://developer.joomla.org/security-centre/766-20190202-core-browserside-mime-type-sniffing-causes-xss-attack-vectors.html
 # CVE-2019-7743 3.9.3 https://developer.joomla.org/security-centre/770-20190206-core-implement-the-typo3-phar-stream-wrapper.html
 # CVE-2019-7744 3.9.3 https://developer.joomla.org/security-centre/765-20190201-core-lack-of-url-filtering-in-various-core-components.html
+# CVE-2019-9711 3.9.4 https://developer.joomla.org/security-centre/773-20190302-core-xss-in-item-title-layout
+# CVE-2019-9712 3.9.4 https://developer.joomla.org/security-centre/772-20190301-core-xss-in-com-config-json-handler
 # CVE-2019-9713 3.9.4 https://developer.joomla.org/security-centre/775-20190304-core-missing-acl-check-in-sample-data-plugins.html
+# CVE-2019-9714 3.9.4 https://developer.joomla.org/security-centre/774-20190303-core-xss-in-media-form-field
+
+
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
     secure_version: '3.9.4'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-7739 https://nvd.nist.gov/vuln/detail/CVE-2019-7742 https://nvd.nist.gov/vuln/detail/CVE-2019-7743 https://nvd.nist.gov/vuln/detail/CVE-2019-7744'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9711 https://developer.joomla.org/security-centre/773-20190302-core-xss-in-item-title-layout https://nvd.nist.gov/vuln/detail/CVE-2019-9712 https://developer.joomla.org/security-centre/772-20190301-core-xss-in-com-config-json-handler https://nvd.nist.gov/vuln/detail/CVE-2019-9713 https://developer.joomla.org/security-centre/775-20190304-core-missing-acl-check-in-sample-data-plugins.html https://nvd.nist.gov/vuln/detail/CVE-2019-9714 https://developer.joomla.org/security-centre/774-20190303-core-xss-in-media-form-field'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
