--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2708,7 +2708,7 @@ WordPress plugin font-organizer:
     location: ['/wp-content/plugins/font-organizer/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/8 https://security-consulting.icu/blog/2019/02/wordpress-font-organizer-xss/'  # TODO: CVE requested 2019-03-18 #658612
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9908 https://lists.openwall.net/full-disclosure/2019/02/05/8 https://security-consulting.icu/blog/2019/02/wordpress-font-organizer-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin give:
