--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2716,7 +2716,7 @@ WordPress plugin give:
     location: ['/wp-content/plugins/give/readme.txt']
     secure_version: '2.3.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/9 https://security-consulting.icu/blog/2019/02/wordpress-give-xss/'  # TODO: CVE requested 2019-03-18
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9909 https://lists.openwall.net/full-disclosure/2019/02/05/9 https://security-consulting.icu/blog/2019/02/wordpress-give-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin kingcomposer:
