--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2724,7 +2724,7 @@ WordPress plugin kingcomposer:
     location: ['/wp-content/plugins/kingcomposer/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/11 https://security-consulting.icu/blog/2019/02/wordpress-kingcomposer-xss/'  # TODO: CVE requested 2019-03-18
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9910 https://lists.openwall.net/full-disclosure/2019/02/05/11 https://security-consulting.icu/blog/2019/02/wordpress-kingcomposer-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin social-networks-auto-poster-facebook-twitter-g:
