--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2732,7 +2732,7 @@ WordPress plugin social-networks-auto-poster-facebook-twitter-g:
     location: ['/wp-content/plugins/social-networks-auto-poster-facebook-twitter-g/readme.txt']
     secure_version: '4.2.8'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/12 https://security-consulting.icu/blog/2019/02/wordpress-social-networks-auto-poster-xss/'  # TODO: CVE requested 2019-03-18
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9911 https://lists.openwall.net/full-disclosure/2019/02/05/12 https://security-consulting.icu/blog/2019/02/wordpress-social-networks-auto-poster-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin yop-poll:
