--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1504,7 +1504,7 @@ WordPress plugin wp-google-maps:
     location: ['/wp-content/plugins/wp-google-maps/readme.txt']
     secure_version: '7.10.43'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/13 https://security-consulting.icu/blog/2019/02/wordpress-wpgooglemaps-xss/'  # TODO: CVE requested 2019-03-18
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9912 https://lists.openwall.net/full-disclosure/2019/02/05/13 https://security-consulting.icu/blog/2019/02/wordpress-wpgooglemaps-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin content-slide:
