--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2740,7 +2740,7 @@ WordPress plugin yop-poll:
     location: ['/wp-content/plugins/yop-poll/readme.txt']
     secure_version: '6.0.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/02/05/15 https://security-consulting.icu/blog/2019/02/wordpress-yop-poll-xss/'  # TODO: CVE requested 2019-03-18
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9914 https://lists.openwall.net/full-disclosure/2019/02/05/15 https://security-consulting.icu/blog/2019/02/wordpress-yop-poll-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin woocommerce-abandoned-cart:
