--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -48,6 +48,55 @@
 # CVE-2017-16784 2.2.1 http://www.cmsmadesimple.org/2017/06/Announcing-CMSMS-2-2-1-Hearts-Desire/ https://www.netsparker.com/web-applications-advisories/ns-17-031-reflected-xss-vulnerability-in-cms-made-simple/
 # CVE-2017-17734 2.2.5 https://www.cmsmadesimple.org/2017/12/Announcing-CMSMS-v2.2.5-Wawa
 # CVE-2017-17735 2.2.5 https://www.cmsmadesimple.org/2017/12/Announcing-CMSMS-v2.2.5-Wawa
+# CVE-2017-16798 TODO
+# CVE-2017-16799 TODO
+# CVE-2017-1000453 TODO
+# CVE-2017-1000454 TODO
+# CVE-2018-5963 TODO http://seclists.org/fulldisclosure/2018/Jan/80 2.2.5 is affected
+# CVE-2018-5964 TODO http://seclists.org/fulldisclosure/2018/Jan/82 2.2.5 is affected
+# CVE-2018-5965 TODO http://seclists.org/fulldisclosure/2018/Jan/83 2.2.5 is affected
+# CVE-2018-7448 installation
+# CVE-2018-7893 TODO probably not reported to vendor
+# CVE-2018-8058 TODO probably not reported to vendor
+# CVE-2018-1000092
+# CVE-2018-10029 TODO
+# CVE-2018-10030 TODO
+# CVE-2018-10031 TODO
+# CVE-2018-10032 TODO
+# CVE-2018-10033 TODO
+# CVE-2018-10081 TODO
+# CVE-2018-10082 TODO
+# CVE-2018-10083 TODO
+# CVE-2018-10084 TODO
+# CVE-2018-10085 TODO
+# CVE-2018-10086 TODO
+# CVE-2018-9921 TODO
+# CVE-2018-10515 TODO
+# CVE-2018-10516 TODO
+# CVE-2018-10517 TODO
+# CVE-2018-10518 TODO
+# CVE-2018-10519 TODO
+# CVE-2018-10520 TODO
+# CVE-2018-10521 TODO
+# CVE-2018-10522 TODO
+# CVE-2018-10523 TODO
+# CVE-2018-18270 TODO
+# CVE-2018-18271 TODO
+# CVE-2018-20464 TODO
+# CVE-2018-19507 TODO
+# CVE-2019-10017 TODO
+# CVE-2019-9053 TODO
+# CVE-2019-9055 TODO
+# CVE-2019-9056 TODO
+# CVE-2019-9057 TODO
+# CVE-2019-9058 TODO
+# CVE-2019-9059 TODO
+# CVE-2019-9061 TODO
+# CVE-2019-9692 TODO
+# CVE-2019-9693 TODO
+# CVE-2019-10105 TODO
+# CVE-2019-10106 TODO
+# CVE-2019-10107 TODO
 CMSMS:
   1:
     location: ['/version.php']
