--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2781,6 +2781,6 @@ WordPress plugin contact-form-builder:
     location: ['/wp-content/plugins/contact-form-builder/readme.txt']
     secure_version: '1.0.69'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/04/23/1'  # CVE requested 2019-04-26 with ID 680115
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11557 https://lists.openwall.net/full-disclosure/2019/04/23/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
