--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2576,12 +2576,13 @@ WordPress plugin strong-testimonials:
     cve: 'http://seclists.org/bugtraq/2018/Jul/75 http://www.defensecode.com/advisories/DC-2018-05-007_WordPress_Strong_Testimonials_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# TODO 1.12.26 http://seclists.org/bugtraq/2018/Jun/20 http://www.defensecode.com/advisories/DC-2018-05-001_WordPress_Form_Maker_Plugin_Advisory.pdf
 WordPress plugin form-maker:
   1:
     location: ['/wp-content/plugins/form-maker/readme.txt']
-    secure_version: '1.12.26'
+    secure_version: '1.13.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2018/Jun/20 http://www.defensecode.com/advisories/DC-2018-05-001_WordPress_Form_Maker_Plugin_Advisory.pdf'  # TODO: No CVE
+    cve: 'https://lists.openwall.net/full-disclosure/2019/04/05/11'  # TODO: CVE requested 2019-04-28
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wordpress-mobile-pack:
