--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -55,6 +55,7 @@ WordPress plugin cart66-lite:
     cve: 'https://nvd.nist.gov/vuln/detail/CVE-2014-9442 https://nvd.nist.gov/vuln/detail/CVE-2014-9461'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2014-9178 affected 2.4.1 https://www.exploit-db.com/exploits/35313 https://packetstormsecurity.com/files/129212/WordPress-SP-Client-Document-Manager-2.4.1-SQL-Injection.html
 # http://www.exploit-db.com/exploits/36576/ 2.5.4 CVE request https://www.openwall.com/lists/oss-security/2015/07/16/6
 WordPress plugin sp-client-document-manager:
   1:
