--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2583,7 +2583,7 @@ WordPress plugin form-maker:
     location: ['/wp-content/plugins/form-maker/readme.txt']
     secure_version: '1.13.5'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://lists.openwall.net/full-disclosure/2019/04/05/11'  # TODO: CVE requested 2019-04-28
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11590 https://lists.openwall.net/full-disclosure/2019/04/05/11'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wordpress-mobile-pack:
