--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -122,6 +122,7 @@
 # CVE-2015-7899 3.4.5   http://developer.joomla.org/security-centre/630-20151003-core-acl-violations.html
 # CVE-2015-8562 3.4.6   https://developer.joomla.org/security-centre/630-20151214-core-remote-code-execution-vulnerability.html https://www.joomla.org/announcements/release-news/5641-joomla-3-4-6-released.html https://blog.sucuri.net/2015/12/remote-command-execution-vulnerability-in-joomla.html https://www.viestintavirasto.fi/kyberturvallisuus/haavoittuvuudet/2015/haavoittuvuus-2015-120.html
 # CVE-2015-8769 3.4.7   https://www.joomla.org/announcements/release-news/5643-joomla-3-4-7.html https://developer.joomla.org/security-centre/639-20151206-core-session-hardening.html https://developer.joomla.org/security-centre/640-20151207-core-sql-injection.html
+# https://lists.openwall.net/full-disclosure/2016/09/20/2
 # CVE-2016-8869 3.6.4   https://www.joomla.org/announcements/release-news/5678-joomla-3-6-4-released.html
 # CVE-2016-9081 3.6.4   https://developer.joomla.org/security-centre/661-20161003-core-account-modifications.html
 # CVE-2016-8870 3.6.4   https://www.joomla.org/announcements/release-news/5678-joomla-3-6-4-released.html
@@ -179,53 +180,53 @@
 # CVE-2019-9712 3.9.4 https://developer.joomla.org/security-centre/772-20190301-core-xss-in-com-config-json-handler
 # CVE-2019-9713 3.9.4 https://developer.joomla.org/security-centre/775-20190304-core-missing-acl-check-in-sample-data-plugins.html
 # CVE-2019-9714 3.9.4 https://developer.joomla.org/security-centre/774-20190303-core-xss-in-media-form-field
-
-
+# CVE-2019-10945 3.9.5 https://developer.joomla.org/security-centre/777-20190401-core-directory-traversal-in-com-media
+# CVE-2019-10946 3.9.5 https://developer.joomla.org/security-centre/778-20190402-core-helpsites-refresh-endpoint-callable-for-unauthenticated-users
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.4'
+    secure_version: '3.9.5'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9711 https://developer.joomla.org/security-centre/773-20190302-core-xss-in-item-title-layout https://nvd.nist.gov/vuln/detail/CVE-2019-9712 https://developer.joomla.org/security-centre/772-20190301-core-xss-in-com-config-json-handler https://nvd.nist.gov/vuln/detail/CVE-2019-9713 https://developer.joomla.org/security-centre/775-20190304-core-missing-acl-check-in-sample-data-plugins.html https://nvd.nist.gov/vuln/detail/CVE-2019-9714 https://developer.joomla.org/security-centre/774-20190303-core-xss-in-media-form-field'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-10945 https://developer.joomla.org/security-centre/777-20190401-core-directory-traversal-in-com-media https://nvd.nist.gov/vuln/detail/CVE-2019-10946 https://developer.joomla.org/security-centre/778-20190402-core-helpsites-refresh-endpoint-callable-for-unauthenticated-users'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.4'
+    secure_version: '3.9.5'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.4 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.5 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.4'
+    secure_version: '3.9.5'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.4 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.4'
+    secure_version: '3.9.5'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.4 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.4'
+    secure_version: '3.9.5'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.4 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.4'
+    secure_version: '3.9.5'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.4 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.5 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
