--- a/yamls/joomla.yml
+++ b/yamls/joomla.yml
@@ -182,51 +182,52 @@
 # CVE-2019-9714 3.9.4 https://developer.joomla.org/security-centre/774-20190303-core-xss-in-media-form-field
 # CVE-2019-10945 3.9.5 https://developer.joomla.org/security-centre/777-20190401-core-directory-traversal-in-com-media
 # CVE-2019-10946 3.9.5 https://developer.joomla.org/security-centre/778-20190402-core-helpsites-refresh-endpoint-callable-for-unauthenticated-users
+# CVE-2019-11809 3.9.6 https://developer.joomla.org/security-centre/780-20190501-core-xss-in-com-users-acl-debug-view.html
 Joomla 3:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.5'
+    secure_version: '3.9.6'
     regexp: ['[\t]<version>(?P<version>3\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-10945 https://developer.joomla.org/security-centre/777-20190401-core-directory-traversal-in-com-media https://nvd.nist.gov/vuln/detail/CVE-2019-10946 https://developer.joomla.org/security-centre/778-20190402-core-helpsites-refresh-endpoint-callable-for-unauthenticated-users'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11809 https://developer.joomla.org/security-centre/780-20190501-core-xss-in-com-users-acl-debug-view.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 2.5:
   1:
     location: ['/administrator/manifests/files/joomla.xml']
-    secure_version: '3.9.5'
+    secure_version: '3.9.6'
     regexp: ['[\t]<version>(?P<version>2\.5\.[0-9]{1,})']
-    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.5 version.'
+    cve: 'Joomla 2.5 is end of life. Please upgrade to 3.9.6 version.'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Joomla 1.7:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.5'
+    secure_version: '3.9.6'
     regexp: ['[\t]+public[\t|\s]\$RELEASE.*?(?P<version>1.7)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.5 version.'
+    cve: 'Joomla 1.7 is end of life. Please upgrade to 3.9.6 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.6:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.5'
+    secure_version: '3.9.6'
     regexp: ['.*?RELEASE.*?(?P<version>1.6)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.5 version.'
+    cve: 'Joomla 1.6 is end of life. Please upgrade to 3.9.6 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.5:
   1:
     location: ['/libraries/joomla/version.php']
-    secure_version: '3.9.5'
+    secure_version: '3.9.6'
     regexp: ['.*?RELEASE.*?(?P<version>1.5)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.5 version.'
+    cve: 'Joomla 1.5 is end of life. Please upgrade to 3.9.6 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
 Joomla 1.0:
   1:
     location: ['/includes/version.php']
-    secure_version: '3.9.5'
+    secure_version: '3.9.6'
     regexp: ['[\t]+var.*?RELEASE.*?(?P<version>1.0)', '.*?DEV_LEVEL.*?(?P<version>[0-9.]{1,})']
-    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.5 version.'
+    cve: 'Joomla 1.0 is end of life. Please upgrade to 3.9.6 version.'
     fingerprint: detect_joomla
     post_processing: ['php5.fcgi']
