--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2808,6 +2808,6 @@ WordPress plugin yuzo-related-post:
     location: ['/wp-content/plugins/yuzo-related-post/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2019/04/yuzo-related-posts-zero-day-vulnerability-exploited-in-the-wild/'  # CVE requested 2019-05-08
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11869 https://www.wordfence.com/blog/2019/04/yuzo-related-posts-zero-day-vulnerability-exploited-in-the-wild/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
