--- a/yamls/wordpress-themes.yml
+++ b/yamls/wordpress-themes.yml
@@ -19,6 +19,6 @@ WordPress theme yellow-pencil-visual-theme-customizer:
     location: ['/wp-content/themes/yellow-pencil-visual-theme-customizer/readme.txt']
     secure_version: '7.2.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2019/04/zero-day-vulnerability-in-yellow-pencil-visual-theme-customizer-exploited-in-the-wild/'  # TODO: CVE requested 2019-05-12 with ID 687685
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-11886 https://www.wordfence.com/blog/2019/04/zero-day-vulnerability-in-yellow-pencil-visual-theme-customizer-exploited-in-the-wild/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
