--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1048,12 +1048,14 @@ WordPress plugin wpgform:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # OVE-20160712-0008 6.2.02 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wp_live_chat_support_plugin.html
+# OVE-20160724-0010 6.2.04 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_vulnerability_in_wp_live_chat_support_wordpress_plugin.html
+# CVE-2019-9913 8.0.18 https://lists.openwall.net/full-disclosure/2019/02/05/14 https://security-consulting.icu/blog/2019/02/wordpress-wp-livechat-xss/
 WordPress plugin wp-live-chat-support:
   1:
     location: ['/wp-content/plugins/wp-live-chat-support/readme.txt']
-    secure_version: '8.0.18'
+    secure_version: '8.0.27'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-9913 https://lists.openwall.net/full-disclosure/2019/02/05/14 https://security-consulting.icu/blog/2019/02/wordpress-wp-livechat-xss/'
+    cve: 'https://arstechnica.com/information-technology/2019/05/hackers-actively-exploit-wordpress-plugin-flaw-to-send-visitors-to-bad-sites/ https://www.zscaler.com/blogs/research/malicious-javascript-injected-wordpress-sites-using-latest-plugin-vulnerability'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # OVE-20160721-0003 1.1.48 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_contact_form_to_email_wordpress_plugin.html
@@ -1214,14 +1216,6 @@ WordPress plugin contact-bank:
     secure_version: '2.1.24'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://wordpress.org/plugins/contact-bank/changelog/'
-    fingerprint: detect_general
-    post_processing: ['php5.fcgi']
-WordPress plugin wp-live-chat-support:
-  1:
-    location: ['/wp-content/plugins/wp-live-chat-support/readme.txt']
-    secure_version: '6.2.04'
-    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160724-0010 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_vulnerability_in_wp_live_chat_support_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wangguard:
