--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -69,11 +69,13 @@
 # CVE-2018-19202 1.8.20 https://blog.mybb.com/2019/02/27/mybb-1-8-20-released-security-maintenance-release/ https://mybb.com/versions/1.8.20/
 # CVE-2019-3578 1.8.20 https://blog.mybb.com/2019/02/27/mybb-1-8-20-released-security-maintenance-release/
 # CVE-2019-3579 1.8.20 https://blog.mybb.com/2019/02/27/mybb-1-8-20-released-security-maintenance-release/
+# CVE-2019-12830 1.8.21 https://blog.mybb.com/2019/06/10/mybb-1-8-21-released-security-maintenance-release/ https://blog.ripstech.com/2019/mybb-stored-xss-to-rce/
+# CVE-2019-12831 1.8.21 https://blog.mybb.com/2019/06/10/mybb-1-8-21-released-security-maintenance-release/ https://blog.ripstech.com/2019/mybb-stored-xss-to-rce/
 MyBB:
   1:
     location: ['/inc/class_core.php']
-    secure_version: '1.8.20'
+    secure_version: '1.8.21'
     regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
-    cve: 'https://blog.mybb.com/2019/02/27/mybb-1-8-20-released-security-maintenance-release/ https://nvd.nist.gov/vuln/detail/CVE-2018-19201 https://nvd.nist.gov/vuln/detail/CVE-2018-19202 https://nvd.nist.gov/vuln/detail/CVE-2019-3578 https://nvd.nist.gov/vuln/detail/CVE-2019-3579'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2019-12830 https://nvd.nist.gov/vuln/detail/CVE-2019-12831 https://blog.mybb.com/2019/06/10/mybb-1-8-21-released-security-maintenance-release/ https://blog.ripstech.com/2019/mybb-stored-xss-to-rce/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
