--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -737,12 +737,13 @@ WordPress plugin wp-comment-rating:
     cve: 'http://seclists.org/bugtraq/2016/Jan/175'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 1.5.3 http://seclists.org/bugtraq/2015/May/43
 WordPress plugin ad-inserter:
   1:
     location: ['/wp-content/plugins/ad-inserter/readme.txt']
-    secure_version: '1.5.3'
+    secure_version: '2.4.22'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/bugtraq/2015/May/43'
+    cve: 'https://www.wordfence.com/blog/2019/07/critical-vulnerability-patched-in-ad-inserter-plugin/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin appointment-booking-calendar:
